[package]
edition = "2018"
authors = ["Christopher Brickley <brickley@gmail.com>"]
description = "A rust crate for sending messages to Slack via webhooks."
homepage = "https://github.com/frostly/rust-slack"
keywords = ["slack", "webhook", "hook", "messaging"]
license = "MIT/Apache-2.0"
name = "slack-hook"
readme = "README.md"
repository = "https://github.com/frostly/rust-slack"
version = "0.9.0"

[dependencies]
chrono = "0.4.19"
reqwest = "0.9"
hex = "0.4.2"
error-chain = "0.12.4"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
url_serde = "0.2.0"
